- Implemented concat() and precat() methods on ImMap, MutMap, ImSet, MutSet, ImRrbTree and MutRrbTree    because:    - concat() was implemented on PersistentVector() because it's a cheap operation.    - concat() and precat() are cheap and sensible on the other collection types (RRB Tree and non-sorted maps and sets)    - Now they all return their original collection type instead of an Xform.    - Mirko Raner (@raner) brought this to my attention.  - Added a few @NotNull and @Contract annotations where they were missing.